--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Home</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="services.html"><i class="fas fa-map-signs"></i> Services</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a>
@@ -41,10 +41,10 @@
           </nav>
     </header>
 
-    <div class="container">
+    <main class="container">
         <h1 class="mb-5">Welcome to Our Site!</i></h1>
-        <button id="AboutUsButton" class="btn btn-primary">Learn more About Us!</button>
-    </div>
+        <button id="AboutUsButton" class="btn btn-primary">Learn About Us!</button>
+    </main>
 
     <!-- Scripting Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
