--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
     <!-- CSS Section -->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./Content/app.css">
 </head>
-<body>
+<body class="bg-image">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><i class="fas fa-spider"></i> WEBD6201</a>
+              <a class="navbar-brand" href="index.html">Lab 1 - WEBD6201</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -24,16 +25,16 @@
                     <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
+                    <a class="nav-link" href="products.html"><i class="fas fa-th"></i> Products</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
+                    <a class="nav-link" href="services.html"><i class="fas fa-bell"></i> Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="services.html"><i class="fas fa-map-signs"></i> Services</a>
+                    <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a>
+                    <a class="nav-link" href="contact.html"><i class="fas fa-phone-alt"></i> Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -42,11 +43,12 @@
     </header>
 
     <main class="container">
-        <h1 class="mb-5">Welcome to Our Site!</i></h1>
-        <button id="AboutUsButton" class="btn btn-primary">Learn About Us!</button>
+      <h1 class="mb-4"></h1>
+      <h3 class="mb-3"></h3>
+      <p id="welcomeMessage" class="col-md-7"></p>
     </main>
 
-    <!-- Scripting Section -->
+    <!-- Scripts Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./Scripts/app.js"></script>
