--- a/services.html
+++ b/services.html
@@ -80,6 +80,6 @@
     <!-- Scripts Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./Scripts/app.js"></script>
+    <script src="./Scripts/app.js" type="text/javascript"></script>
 </body>
 </html>
