Live site hosting for Lab 1 - DOM Manipulation

--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
         <tbody>
           <tr>
             <td>
-              <img class="img-thumbnail mt-5" width="800" src="./Images/img-service-netd.JPG" alt="">
+              <img class="img-thumbnail mt-5" width="800" src="./Images/img-service-netd.JPG" alt="Custom programming image">
             </td>
             <td class="align-baseline spacing" width="400">
               <h3 id="heading1" class="mt-5 mb-3"></h3>
@@ -57,7 +57,7 @@
           </tr>
           <tr>
             <td>
-              <img class="img-thumbnail mt-5" width="800" src="./Images/img-service-webd.JPG" alt="">
+              <img class="img-thumbnail mt-5" width="800" src="./Images/img-service-webd.JPG" alt="Web service image">
             </td>
             <td class="align-baseline spacing">      
               <h3 id="heading2" class="mt-5 mb-3" width="400"></h3>
@@ -66,7 +66,7 @@
           </tr>
           <tr>
             <td>
-              <img class="img-thumbnail mt-5" width="800" src="./Images/img-service-sysa.jpg" alt="">
+              <img class="img-thumbnail mt-5" width="800" src="./Images/img-service-sysa.JPG" alt="Software testing image">
             </td>
             <td class="align-baseline spacing">      
               <h3 id="heading3" class="mt-5 mb-3" width="400"></h3>
@@ -80,6 +80,6 @@
     <!-- Scripts Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./Scripts/app.js" type="text/javascript"></script>
+    <script src="./Scripts/app.js"></script>
 </body>
 </html>
