--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,6 @@
     <!-- Scripts Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./Scripts/app.js" type="text/javascript"></script>
+    <script src="./Scripts/app.js"></script>
 </body>
 </html>
