--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     <!-- Scripts Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./Scripts/app.js" type="text/javascript"></script>
+    <script src="./Scripts/app.js"></script>
 </body>
 </html>
