--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
         <tbody>
           <tr>
             <td width="800">
-              <img class="img-thumbnail mt-5" src="./Images/img-mpa.PNG" alt="">
+              <img class="img-thumbnail mt-5" src="./Images/img-mpa.PNG" alt="Multi-purpose image">
             </td>
             <td class="align-baseline spacing">
               <h3 id="heading1" class="mt-5 mb-3" width="600"></h3>
@@ -57,7 +57,7 @@
           </tr>
           <tr>
             <td width="800">
-              <img class="img-thumbnail mt-5" src="./Images/img-sysa.jpg" alt="">
+              <img class="img-thumbnail mt-5" src="./Images/img-sysa.jpg" alt="Test automation image">
             </td>
             <td class="align-baseline spacing">      
               <h3 id="heading2" class="mt-5 mb-3" width="600"></h3>
@@ -66,7 +66,7 @@
           </tr>
           <tr>
             <td width="800">
-              <img class="img-thumbnail mt-5" src="./Images/img-syde.jpg" alt="">
+              <img class="img-thumbnail mt-5" src="./Images/img-syde.jpg" alt="UML class diagram">
             </td>
             <td class="align-baseline spacing">      
               <h3 id="heading3" class="mt-5 mb-3" width="600"></h3>
@@ -80,6 +80,6 @@
     <!-- Scripts Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./Scripts/app.js" type="text/javascript"></script>
+    <script src="./Scripts/app.js"></script>
 </body>
 </html>
