--- a/contact-list.html
+++ b/contact-list.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
-
+    <title>Contact-List</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./Content/app.css">
 </head>
-<body class="bg-image">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">Lab 1 - WEBD6201</a>
+              <a class="navbar-brand" href="index.html"><i class="fas fa-spider"></i> WEBD6201</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -25,16 +24,16 @@
                     <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="products.html"><i class="fas fa-th"></i> Products</a>
+                    <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="services.html"><i class="fas fa-bell"></i> Services</a>
+                    <a class="nav-link" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About Us</a>
+                    <a class="nav-link" href="services.html"><i class="fas fa-map-signs"></i> Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html"><i class="fas fa-phone-alt"></i> Contact Us</a>
+                    <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -43,43 +42,38 @@
     </header>
 
     <main class="container">
-      <h1 class="mb-3 mt-2"></h1>
-      <table>
-        <tbody>
-          <tr>
-            <td width="800">
-              <img class="img-thumbnail mt-5" src="./Images/img-mpa.PNG" alt="Multi-purpose image">
-            </td>
-            <td class="align-baseline spacing">
-              <h3 id="heading1" class="mt-5 mb-3" width="600"></h3>
-              <p id="project1"></p>
-            </td>
-          </tr>
-          <tr>
-            <td width="800">
-              <img class="img-thumbnail mt-5" src="./Images/img-sysa.jpg" alt="Test automation image">
-            </td>
-            <td class="align-baseline spacing">      
-              <h3 id="heading2" class="mt-5 mb-3" width="600"></h3>
-              <p id="project2"></p>
-            </td>
-          </tr>
-          <tr>
-            <td width="800">
-              <img class="img-thumbnail mt-5" src="./Images/img-syde.jpg" alt="UML class diagram">
-            </td>
-            <td class="align-baseline spacing">      
-              <h3 id="heading3" class="mt-5 mb-3" width="600"></h3>
-              <p id="project3"></p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+        <h1>Contact List</h1>
+
+        <div class="row">
+          <div class="col">
+
+            <button id="addButton" class="btn btn-primary mb-1"><i class="fas fa-plus-circle"></i> Add Contact</button>
+
+            <table class="table table-striped table-bordered table-hover">
+              <thead class="table-dark">
+                <tr>
+                  <th scope="col" class="text-center">#</th>
+                  <th scope="col">Full Name</th>
+                  <th scope="col">Contact Number</th>
+                  <th scope="col">Email Address</th>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody id="contactList">
+
+              </tbody>
+            </table>
+          </div>
+        </div>
     </main>
 
-    <!-- Scripts Section -->
+    <!-- Scripting Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="./Scripts/namespace.js"></script>
+    <script src="./Scripts/contact.js"></script>
     <script src="./Scripts/app.js"></script>
 </body>
 </html>
