--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services</title>
+    <title>Our Projects</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -27,10 +27,10 @@
                     <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
+                    <a class="nav-link active" aria-current="page" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="services.html"><i class="fas fa-map-signs"></i> Services</a>
+                    <a class="nav-link" href="services.html"><i class="fas fa-map-signs"></i> Services</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a>
@@ -42,7 +42,7 @@
     </header>
 
     <div class="container">
-        <h1>Welcome to Our Services</i></h1>
+        <h1>Welcome to Our Projects</i></h1>
     </div>
 
     <!-- Scripting Section -->
