--- a/contact.html
+++ b/contact.html
@@ -9,36 +9,11 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./Content/app.css">
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><i class="fas fa-spider"></i> WEBD6201</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="services.html"><i class="fas fa-map-signs"></i> Services</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+
     </header>
 
     <main class="container">
@@ -80,7 +55,7 @@
             <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fas fa-undo fa-lg"></i> Cancel</button>
           </form>
 
-          <div class="col-lg-4 col-md-4">
+          <div id="contact-listArea" class="col-lg-4 col-md-4">
             <a href="contact-list.html" class="btn btn-primary btn-lg"><i class="fas fa-users fa-lg"></i> Show Contact List</a>
           </div>
 
@@ -94,5 +69,6 @@
     <script src="./Scripts/namespace.js"></script>
     <script src="./Scripts/contact.js"></script>
     <script src="./Scripts/app.js"></script>
+    <script src="./Scripts/hideContactListLink.js"></script>
 </body>
 </html>
