Live site for ICE 6

--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,7 @@
     <script src="./Scripts/namespace.js"></script>
     <script src="./Scripts/contact.js"></script>
     <script src="./Scripts/app.js"></script>
+    <!-- Added this script to cause contact list button to disappear -->
     <script src="./Scripts/hideContactListLink.js"></script>
 </body>
 </html>
